examples/test/testpolicy8046.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8046
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key19: value21
      key44: value47
      key3: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value21
          key24: value26
      podSelector:
        matchLabels:
          key10: value22
          key29: value32
          key44: value11
